update readme, add css

--- a/index.html
+++ b/index.html
@@ -2,4 +2,8 @@
     <head>
         <script src="teamPicker.js"></script>
     </head>
+    <body>
+        <h2>2018 World Cup Pool</h2>
+        
+    </body>
 </html>
