titles and buttons

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
     <head>
+        <link rel="stylesheet" type="text/css" href="main.css">
         <script src="teamPicker.js"></script>
     </head>
     <body>
         <h2>2018 World Cup Pool</h2>
-        
+        <input type="button" class="button" value="Input Button">
     </body>
 </html>
