filling the table func

--- a/index.html
+++ b/index.html
@@ -6,5 +6,13 @@
     <body>
         <h2>2018 World Cup Pool</h2>
         <input type="button" class="button" value="Input Button">
+        <table>
+            <tr>
+                <th>Name</th>
+                <th>Stronger Team</th>
+                <th>Weaker Team</th>
+            </tr>
+            <script src="tableFill.js"></script>
+        </table>
     </body>
 </html>
